--- a/zest_station/partials_v2/checkin/zsCheckinAddon.html
+++ b/zest_station/partials_v2/checkin/zsCheckinAddon.html
@@ -20,8 +20,8 @@
                     </div>
                     <button type="button" data-action="popup" class="button transparent" click-touch="addOnDoneButtonClicked(selectedAddon)" editable-text="DONE" ng-style="{'visibility': isAddonFlatOrRoomType(selectedAddon) ? 'visible': 'hidden'}">{{'DONE' |translate}}</button>
                     <button type="button" class="button" ng-hide="isAddonFlatOrRoomType(selectedAddon)" ng-class="{'transparent text-red':selectedAddon.is_selected}" click-touch="addRemoveAddOn(selectedAddon)">
-                        <span ng-hide="selectedAddon.is_selected" editable-text="ADD">{{'ADD' |translate}}</span>
-                        <span ng-show="selectedAddon.is_selected" editable-text="REMOVE">{{'REMOVE' |translate}}</span>
+                        <span ng-hide="selectedAddon.is_selected" editable-text="ADD">{{'ADD_ADDON' |translate}}</span>
+                        <span ng-show="selectedAddon.is_selected" editable-text="REMOVE">{{'REMOVE_ADDON' |translate}}</span>
                     </button>
                 </div>
             </div>
@@ -33,9 +33,9 @@
     <!-- Remove class "open" to hide popup content -->
     <div class="popup-content">
         <h2 class="nocaps">
-            <text editable-text="ADDON_ERROR_HEADER"> {{'ADDON_ERROR_HEADER' |translate}}</text>
+            <text editable-text="{{errorHeader}}"> {{ errorHeader  |translate}}</text>
         </h2>
-        <h3> {{errorMessage}}</h3>
+        <h3 editable-text="{{errorMessage}}"> {{errorMessage | translate}}</h3>
         <button type="button" class="button" click-touch='showErrorPopUp = false'>
             <text editable-text="DONE"> {{'DONE' |translate}}</text>
         </button>
@@ -88,8 +88,8 @@
                                 </div>
                                 <!-- Replace 'btn-class' with 'transparent text-red' if 'Remove' -->
                                 <button type="button" class="button" ng-hide="isAddonFlatOrRoomType(selectedAddon)" ng-class="{'transparent text-red':selectedAddon.is_selected}" click-touch="addRemoveAddOn(selectedAddon)">
-                                    <span ng-hide="selectedAddon.is_selected" editable-text="ADD">{{'ADD' |translate}}</span>
-                                    <span ng-show="selectedAddon.is_selected" editable-text="REMOVE">{{'REMOVE' |translate}}</span>
+                                    <span ng-hide="selectedAddon.is_selected" editable-text="ADD">{{'ADD_ADDON' |translate}}</span>
+                                    <span ng-show="selectedAddon.is_selected" editable-text="REMOVE">{{'REMOVE_ADDON' |translate}}</span>
                             </div>
                         </div>
                     </div>
@@ -128,8 +128,8 @@
 </section>
 <section id="main" class="addon-screen centered" role="main" ng-show="mode === 'SINGLE_ADDON_ERROR'">
     <div id="content">
-        <h1 editable-text="ADDON_ERROR_HEADER">{{'ADDON_ERROR_HEADER' | translate}}</h1>
-        <h3>{{errorMessage}}</h3>
+        <h1 editable-text="{{errorHeader}}">{{ errorHeader | translate}}</h1>
+        <h3  editable-text="{{errorMessage}}">{{errorMessage | translate}}</h3>
         <br/>
         <button type="button" class="button" click-touch="navigateToNextScreen()" edit-text="CONTINUE">{{'CONTINUE' | translate}}</button>
     </div>
