CICO-38761 adding add-on popup close

--- a/zest_station/partials_v2/checkin/zsCheckinAddon.html
+++ b/zest_station/partials_v2/checkin/zsCheckinAddon.html
@@ -1,6 +1,7 @@
 <!-- Add .open to show the popup -->
 <div class="popup" ng-class="{'open':showAddonPopup}">
     <div class="popup-content add-on">
+        <i class="close-popup" touch-press="closePopup()"></i>
         <div class="add-on-picture">
             <img src="{{selectedAddon.image}}" />
         </div>
