--- a/zest_station/partials_v2/checkin/zsCheckinReservationDetails.html
+++ b/zest_station/partials_v2/checkin/zsCheckinReservationDetails.html
@@ -93,7 +93,7 @@
             <text editable-text="TERMS_CONDITIONS_VIEW_HEADER"> {{'TERMS_CONDITIONS_VIEW_HEADER' |translate}}</text>
         </h1>
         <div id="flex-holder" >
-            <div id="textual" ng-iscroll="terms" ng-iscroll-delay="100" ng-init="setScroll()" class="pull-left station-terms scrollable fill-height"> <!-- Add ng-scroll here -->
+            <div id="textual" ng-iscroll="terms-container" ng-iscroll-delay="100" ng-init="setScroll()" class="pull-left station-terms scrollable fill-height"> <!-- Add ng-scroll here -->
                 <div class="wrapper">
                     <h4><label>
                         <text editable-text="TERMS_CONDITIONS_HEADER"> {{'TERMS_CONDITIONS_HEADER' |translate}}</text>
