--- a/zest_station/partials_v2/zsDiagnostics.html
+++ b/zest_station/partials_v2/zsDiagnostics.html
@@ -27,7 +27,7 @@
 
 
 <!-- WORKSTATION + Encoding Info -->
-<span ng-show="zestStationData.timeDebugger == 'true'" class="timer-debugger-right dev-cls non-center">
+<span ng-show="zestStationData.timeDebugger == 'true'" class="timer-debugger-right dev-cls non-center" click-touch='zestStationData.showMoreDebugInfo=!zestStationData.showMoreDebugInfo'>
      <br> <span>Assigned Workstation ({{zestStationData.workstationName}}) <br> </span>
      <span ng-show='zestStationData.encoder_id'> Encoder <span>[ {{zestStationData.key_encoder_name}}, {{zestStationData.encoder_id}} ]</span> <br> </span>
      <span ng-show='zestStationData.encoder_id == ""'> Encoder [ <span class='key-in-progress'>Not Set in Workstation</span> ] <br> </span>
@@ -43,4 +43,12 @@
         Zest Station Handler - <span ng-class='{"key-in-progress":zestStationData.stationHandlerConnectedStatus == "Not-Connected"}'>({{zestStationData.stationHandlerConnectedStatus}})</span><br> 
     </span>
     
+    <span ng-show='zestStationData.showMoreDebugInfo'>
+        <span ng-show='isIpad'>iPad/iPhone</span>
+        <span ng-show='inChromeApp && !inElectron'>Windows App (C)</span>
+        <span ng-show='inElectron'>Windows App (E)</span>
+        <span ng-show='!isIpad && !inChromeApp'>Web Browser</span>
+    </span>
+
+
 </span>
