CICO-40524 public v2 theme updates

--- a/zest_station/partials_v2/checkin/zsCheckinScanPassport.html
+++ b/zest_station/partials_v2/checkin/zsCheckinScanPassport.html
@@ -111,7 +111,7 @@
 
 
 <!-- Scan Results | Add Guest screen  -->
-<section id="main" class="centered test" role="main" click-touch='resetTime()' ng-show="mode == 'SCAN_RESULTS' || mode == 'ADMIN_VERIFY_PASSPORTS'">
+<section id="main" class="centered test add_remove_main" role="main" click-touch='resetTime()' ng-show="mode == 'SCAN_RESULTS' || mode == 'ADMIN_VERIFY_PASSPORTS'">
     <div id="content" class='add-guest-mode-content' ng-show="!AddGuestMode">
 
         <h1 ng-hide="mode !== 'SCAN_RESULTS'">
