--- a/zest_station/partials_v2/checkin/zsCheckInAddRemoveGuest.html
+++ b/zest_station/partials_v2/checkin/zsCheckInAddRemoveGuest.html
@@ -1,6 +1,6 @@
 
 <!-- Content -->
-<section id="main" class="centered test" role="main" click-touch='resetTime()' >
+<section id="main" class="centered test add_remove_main" role="main" click-touch='resetTime()' >
     <div id="content" class='add-guest-mode-content' ng-show="!AddGuestMode">
 
         <h1>
