CICO-40524 public updates icons and buttons to match design

--- a/zest_station/partials_v2/checkin/zsCheckinFinal.html
+++ b/zest_station/partials_v2/checkin/zsCheckinFinal.html
@@ -44,7 +44,7 @@
             <text editable-text="EMAIL_FAILED"> {{'EMAIL_FAILED' |translate}}</text>
         </h3>
 
-        <button type="button" class="button" click-touch='navToHome()'>
+        <button type="button" class="button done-btn" click-touch='navToHome()'>
             <text editable-text="CHECKIN_DONE_BTN"> {{'CHECKIN_DONE_BTN' |translate}}</text>
         </button>
     </div>
