--- a/zest_station/partials_v2/checkin/zsCheckinReservationDetails.html
+++ b/zest_station/partials_v2/checkin/zsCheckinReservationDetails.html
@@ -26,7 +26,7 @@
                             <text editable-text="ADDTL_RESIDENTS"> {{'ADDTL_RESIDENTS' |translate}}</text>
                              ({{selectedReservation.guest_details.length-1}})
                          </p>
-                        <button ng-if='zestStationData.kiosk_add_remove_guests' type="button" class="button" touch-press="addRemove()" >
+                        <button ng-if='zestStationData.kiosk_add_remove_guests' type="button" class="button add-remove-btn" touch-press="addRemove()" >
                             <text editable-text="ADD_REMOVE_GUESTS"> {{'ADD_REMOVE_GUESTS' |translate}}</text>
                         </button>
                     </div>
