--- a/zest_station/partials_v2/zsRoot.html
+++ b/zest_station/partials_v2/zsRoot.html
@@ -85,7 +85,7 @@
         <h2 class="nocaps">
             <text editable-text="IDLE_TIMEOUT_MSG"> {{'IDLE_TIMEOUT_MSG' |translate}}</text>
         </h2>
-        <button type="button" class="button" click-touch='resetTime();'>
+        <button type="button" class="button idle-timeout-btn" click-touch='resetTime();'>
             <text editable-text="IDLE_TIMEOUT_YES"> {{'IDLE_TIMEOUT_YES' |translate}}</text>
         </button>
     </div>
