--- a/zest_station/partials_v2/zsSpeakToStaff.html
+++ b/zest_station/partials_v2/zsSpeakToStaff.html
@@ -8,7 +8,7 @@
         <h2 class="nocaps">
         	<text editable-text="SPEAK_TO_STAFF_SUB"> {{'SPEAK_TO_STAFF_SUB' |translate}}</text>
     	</h2>
-        <button type="button" class="button" click-touch="navToHome()">
+        <button type="button" class="button done-btn" click-touch="navToHome()">
         	<text editable-text="SPEAK_TO_STAFF_RETURN"> {{'SPEAK_TO_STAFF_RETURN' |translate}}</text>
     	</button>
     </div>
