--- a/zest_station/partials_v2/checkin/zscheckinKeyDispense.html
+++ b/zest_station/partials_v2/checkin/zscheckinKeyDispense.html
@@ -27,10 +27,10 @@
                 <text editable-text="HOW_MANY_KEYS"> {{'HOW_MANY_KEYS' |translate}}</text>
             </h2>
             <div id="key-options">
-                <button ng-hide="isEmpty('UNO_KEY')" type="button" class="button" touch-press="makeKeys(1)">
+                <button ng-hide="isEmpty('UNO_KEY')" type="button" class="button make-key-btn" touch-press="makeKeys(1)">
                     <text editable-text="UNO_KEY"> {{'UNO_KEY' |translate}}</text>
                 </button>
-                <button ng-hide="isEmpty('DOS_KEY')" type="button" class="button" touch-press="makeKeys(2)">
+                <button ng-hide="isEmpty('DOS_KEY')" type="button" class="button make-key-btn" touch-press="makeKeys(2)">
                     <text editable-text="DOS_KEY"> {{'DOS_KEY' |translate}}</text>
                 </button>
             </div>
