--- a/zest_station/partials_v2/checkout/zsCheckoutFinal.html
+++ b/zest_station/partials_v2/checkout/zsCheckoutFinal.html
@@ -12,7 +12,7 @@
         <h3 ng-show="emailSendingFailed">
         	<text editable-text="EMAIL_BILL_NOT_SENT_MSG"> {{'EMAIL_BILL_NOT_SENT_MSG' |translate}}</text>
     	</h3>
-        <button type="button" class="button" click-touch='navToHome()'>
+        <button type="button" class="button done-btn" click-touch='navToHome()'>
         	<text editable-text="DONE_BTN"> {{'DONE_BTN' |translate}}</text>
     	</button>
     </div>
