--- a/zest_station/partials_v2/checkout/zsEmailBill.html
+++ b/zest_station/partials_v2/checkout/zsEmailBill.html
@@ -50,7 +50,7 @@
         <h3 ng-show="printOpted">
             <text editable-text="BILL_PRINTED_BELOW"> {{'BILL_PRINTED_BELOW' |translate}}</text>
         </h3>
-        <button type="button" class="button" click-touch='navToHome()'>
+        <button type="button" class="button done-btn" click-touch='navToHome()'>
             <text editable-text="DONE_BTN"> {{'DONE_BTN' |translate}}</text>
         </button>
     </div>
