CICO-40524 fix some buttons design for v2 of public

--- a/zest_station/partials_v2/checkin/zsCheckinEarly.html
+++ b/zest_station/partials_v2/checkin/zsCheckinEarly.html
@@ -22,7 +22,7 @@
             <text editable-text="EARLY_AVAIL_PURCHASED_REALLY_EARLY"> {{'EARLY_AVAIL_PURCHASED_REALLY_EARLY' |translate}}</text>
         </h3>
 
-        <button ng-show="mode === 'CHECKIN_LATER' || mode === 'EARLY_CHECKIN_PREPAID_NOT_READY'" type="button" class="button" touch-press='clickedOnCloseButton()'>
+        <button ng-show="mode === 'CHECKIN_LATER' || mode === 'EARLY_CHECKIN_PREPAID_NOT_READY'" type="button" class="button done-btn" touch-press='clickedOnCloseButton()'>
             <text editable-text="EARLY_DONE"> {{'EARLY_DONE' |translate}}</text>
         </button>
     
