--- a/zest_station/partials_v2/pickupKey/zsPickupKeyRegistartionCardPrint.html
+++ b/zest_station/partials_v2/pickupKey/zsPickupKeyRegistartionCardPrint.html
@@ -18,7 +18,7 @@
         <h3 ng-show="mode === 'PRINT_FAILED_AND_KEY_FAILED'">
             <text editable-text="PRINT_FAILED_AND_KEY_FAILED"> {{'PRINT_FAILED_AND_KEY_FAILED' |translate}}</text>
         </h3>
-        <button type="button" class="button" click-touch="clickedOnCloseButton()" ng-style="doneButtonStyle" ng-show="showDoneButton">
+        <button type="button" class="button done-btn" click-touch="clickedOnCloseButton()" ng-style="doneButtonStyle" ng-show="showDoneButton">
             <text editable-text="DONE"> {{'DONE' |translate}}</text>
         </button>
     </div>
