--- a/zest_station/partials_v2/checkin/zsCheckinRoomError.html
+++ b/zest_station/partials_v2/checkin/zsCheckinRoomError.html
@@ -10,7 +10,7 @@
             <text editable-text="ROOM_NOT_AVAIL_MSG"> {{'ROOM_NOT_AVAIL_MSG' |translate}}</text>
         </h2>
         <!-- General error -->
-        <button type="button" class="button" touch-press="clickedOnCloseButton()">
+        <button type="button" class="button done-btn" touch-press="clickedOnCloseButton()">
             <text editable-text="DONE_BTN"> {{'DONE_BTN' |translate}}</text>
         </button>
     </div>
@@ -25,7 +25,7 @@
         <h3>
             <text editable-text="CHECKIN_TOO_EARLY_SUB_MSG"> {{'CHECKIN_TOO_EARLY_SUB_MSG' |translate}}</text>
         </h3>
-        <button type="button" class="button" touch-press='clickedOnCloseButton()'>
+        <button type="button" class="button done-btn" touch-press='clickedOnCloseButton()'>
             <text editable-text="CHECKIN_TOO_EARLY_DONE"> {{'CHECKIN_TOO_EARLY_DONE' |translate}}</text>
         </button>
     </div>
