CICO-40524 public v2 theme update

--- a/zest_station/partials_v2/zsHomePage.html
+++ b/zest_station/partials_v2/zsHomePage.html
@@ -11,10 +11,8 @@
 
                         <text editable-text="PICKUP_KEY">{{'PICKUP_KEY' |translate}}</text>
                         
-                        <span>
-
+                        <span ng-class='{"lighter-text":zestStationData.themeUsesLighterSubHeader}'>
                             <text editable-text="HOME_PUK_SUB">{{'HOME_PUK_SUB' |translate}}</text>
-
                         </span>
                     </li>
                     <li ng-if="zestStationData.home_screen.check_in">
