CICO-40524 updates editable text directive and some public theme changes

--- a/zest_station/partials_v2/checkin/zsCheckinReservationDetails.html
+++ b/zest_station/partials_v2/checkin/zsCheckinReservationDetails.html
@@ -88,7 +88,7 @@
 </section>
 
 <section id="main" class="centered kiosk" role="main" click-touch='resetTime()' ng-show="mode === 'TERMS_CONDITIONS'">
-    <div id="content">
+    <div id="content" class='terms-content'>
         <h1>
             <text editable-text="TERMS_CONDITIONS_VIEW_HEADER"> {{'TERMS_CONDITIONS_VIEW_HEADER' |translate}}</text>
         </h1>
