CICO-40524 fix some buttons in public v2 theme

--- a/zest_station/partials_v2/checkin/zsCheckinRoomUpsell.html
+++ b/zest_station/partials_v2/checkin/zsCheckinRoomUpsell.html
@@ -1,6 +1,6 @@
 <!-- Content -->
 <section id="main" role="main" click-touch='resetTime()' ng-class="{'centered':mode === 'ERROR_MODE'}" class="upgrades-section">
-    <div id="content" ng-show="mode === 'ROOM_UPSELL_LIST'">
+    <div id="content" ng-show="mode === 'ROOM_UPSELL_LIST'" class='room-upsell-content'>
         <h1><text editable-text="ROOM_UPGRADE_HEADER"> {{'ROOM_UPGRADE_HEADER' |translate}}</text></h1>
         <h3><text editable-text="ROOM_UPGRADE_LIST_SUB_HEADER"> {{'ROOM_UPGRADE_LIST_SUB_HEADER' |translate}}</text></h3>
         <!--Layout V4: add  .upgrade-list-v2 -->
