--- a/zest_station/partials_v2/checkin/zsCheckinSuccess.html
+++ b/zest_station/partials_v2/checkin/zsCheckinSuccess.html
@@ -11,7 +11,7 @@
             <span class="number">{{room}}</span>
         </div>
 
-        <button type="button" class="button" click-touch='checkinFinalDoneAction()'>
+        <button type="button" class="button done-btn" click-touch='checkinFinalDoneAction()'>
             <text editable-text="CHECKIN_SUCCESS_DONE_BTN">{{'CHECKIN_SUCCESS_DONE_BTN' | translate}}</text>
         </button>
     </div>
