--- a/zest_station/partials_v2/checkin/zscheckinKeyDispense.html
+++ b/zest_station/partials_v2/checkin/zscheckinKeyDispense.html
@@ -138,7 +138,7 @@
             <br>
             <br>
         </div>
-        <button type="button" class="button" click-touch="goToNextScreen('success')">
+        <button type="button" class="button done-btn" click-touch="goToNextScreen('success')">
             <text editable-text="DONE"> {{'DONE' |translate}}</text>
         </button>
     </div>
