CICO-39917 public style updates for qa

--- a/zest_station/partials_v2/checkin/zsCheckinEarly.html
+++ b/zest_station/partials_v2/checkin/zsCheckinEarly.html
@@ -52,7 +52,7 @@
                 <text editable-text="EARLY_AVAIL_FREE"> {{'EARLY_AVAIL_FREE' |translate}}</text>
             </h2>
             <!-- assuming within  -->
-            <button type="button" class="button" touch-press='continue(true)'>
+            <button type="button" class="button done-btn" touch-press='continue(true)'>
                 <text editable-text="EARLY_CONTINUE"> {{'EARLY_CONTINUE' |translate}}</text>
             </button>
 
