--- a/zest_station/partials_v2/checkin/zsCheckinRoomUpsell.html
+++ b/zest_station/partials_v2/checkin/zsCheckinRoomUpsell.html
@@ -71,7 +71,7 @@
         <h2>
            <text editable-text="ROOM_UPGRADE_ERROR_SUB"> {{'ROOM_UPGRADE_ERROR_SUB' |translate}}</text>
         </h2>
-        <button type="button" class="button" click-touch="skipRoomUpsell()">
+        <button type="button" class="button  done-btn" click-touch="skipRoomUpsell()">
             <text editable-text="ROOM_UPGRADE_ERROR_CONTINUE"> {{'ROOM_UPGRADE_ERROR_CONTINUE' |translate}}</text>
         </button>
     </div>
