CICO-40732 fixes language tags for bill details screen

--- a/zest_station/partials_v2/checkout/zsReservationBill.html
+++ b/zest_station/partials_v2/checkout/zsReservationBill.html
@@ -10,8 +10,8 @@
                     <div id="bill">
                         <p>
                             <strong>{{first_name}}&nbsp;{{last_name}}</strong>
-                            <span ng-show="!zestStationData.hotel_settings.is_hourly_rate_on">{{days_of_stay}} nights</span>
-                            <span ng-show="zestStationData.hotel_settings.is_hourly_rate_on">{{hours_of_stay}} hours</span>
+                            <span ng-show="!zestStationData.hotel_settings.is_hourly_rate_on">{{days_of_stay}} {{'DAY_NIGHTS' |translate}}</span>
+                            <span ng-show="zestStationData.hotel_settings.is_hourly_rate_on">{{hours_of_stay}} {{'HOURS' |translate}}</span>
                         </p>
                         <div id="bill-grid">
                             <div id="grid-head">
