CICO-39917 public fix QA items. adds demo mode to check-out from bill details screen

--- a/zest_station/partials_v2/checkout/zsEmailBill.html
+++ b/zest_station/partials_v2/checkout/zsEmailBill.html
@@ -72,7 +72,7 @@
                 </button>
             </div>
         </form>
-        <button id="skipEmailInputBtn" type='button' class='button' touch-press='goToNextScreen()'>
+        <button id="skipEmailInputBtn" type='button' class='button done-btn' touch-press='goToNextScreen()'>
             <text editable-text="SKIP_BTN"> {{'SKIP_BTN' |translate}}</text>
         </button>
     </div>
