CICO-39917 fixes public station admin screen, and an issue with editor mode, entering spacebar in a button adds the space only to the end of the string instead of at users' current position

--- a/zest_station/partials_v2/zsCheckoutReservationSearch.html
+++ b/zest_station/partials_v2/zsCheckoutReservationSearch.html
@@ -85,6 +85,7 @@
             </ul>
         </nav>
     </div>
+    <span ng-include="'/assets/partials_v2/zsTabletFooter.html'"></span>
 </section>
 
 <!-- user has already checkout -->
