CICO-39917 updates public theme to fix button style on add/remove guest, aligns room upgrade screen for ipad/pro, and nationality screen

--- a/zest_station/partials_v2/checkin/zsCheckInAddRemoveGuest.html
+++ b/zest_station/partials_v2/checkin/zsCheckInAddRemoveGuest.html
@@ -10,7 +10,7 @@
 
             <li ng-repeat='guest in selectedReservation.guest_details track by $index' ng-hide='guest.is_primary'>
                 <span class="details">{{guest.last_name}}, {{guest.first_name}}</span>
-                <button type="button" class="button" click-touch='removeGuest(guest.id)' ng-class='{"overlay grey": selectedReservation.guest_details.length <= 1}'>{{'REMOVE_BTN' |translate}}</button>
+                <button type="button" class="button remove-btn" click-touch='removeGuest(guest.id)' ng-class='{"overlay grey": selectedReservation.guest_details.length <= 1}'>{{'REMOVE_BTN' |translate}}</button>
             </li>
 
         </ul>
