--- a/zest_station/partials_v2/checkin/zsCheckinScanPassport.html
+++ b/zest_station/partials_v2/checkin/zsCheckinScanPassport.html
@@ -149,7 +149,7 @@
                 </span>
                 
 
-                <button type="button" class="button" ng-show='showRemoveButton' click-touch='removeGuest(guest.id)' ng-class='{"overlay grey": selectedReservation.guest_details.length <= 1}'>{{'REMOVE_BTN' |translate}}</button>
+                <button type="button" class="button remove-btn" ng-show='showRemoveButton' click-touch='removeGuest(guest.id)' ng-class='{"overlay grey": selectedReservation.guest_details.length <= 1}'>{{'REMOVE_BTN' |translate}}</button>
             </li>
 
         </ul>
