--- a/zest_station/partials_v2/checkin/zsCheckinCCSwipe.html
+++ b/zest_station/partials_v2/checkin/zsCheckinCCSwipe.html
@@ -73,7 +73,7 @@
                 
 
                 <li ng-show='(swipeTimeout || swipeError) && !waitingForSwipe'>
-                    <button type="button" class="button option" touch-press='initStaff()'>
+                    <button type="button" class="button option" touch-press='talkToStaff()'>
                         <div ng-include="icons.url.staff"></div>
                     </button>
                     <h1>
