CICO-39917 room upgrade public theme fixes screen

--- a/zest_station/partials_v2/checkin/zsCheckinRoomUpsell.html
+++ b/zest_station/partials_v2/checkin/zsCheckinRoomUpsell.html
@@ -36,7 +36,7 @@
             </div>
         </div>
     </div>
-    <div id="content" ng-show="mode === 'ROOM_DETAILS'">
+    <div id="content" class='room-details' ng-show="mode === 'ROOM_DETAILS'">
         <h1><text editable-text="ROOM_UPGRADE_HEADER"> {{'ROOM_UPGRADE_HEADER' |translate}}</text></h1>
         <div id="upgrade" class="tabled-options">
             <div class="upgrade-picture">
